--- a/src/assets/scss/bootstrap/_reboot.scss
+++ b/src/assets/scss/bootstrap/_reboot.scss
@@ -162,12 +162,17 @@ blockquote {
 
 a {
   color: $link-color;
+  font-weight: $font-weight-bold;
+  letter-spacing: .083125em;
   text-decoration: $link-decoration;
+  text-transform: uppercase;
 
+  /*
   @include hover-focus {
     color: $link-hover-color;
     text-decoration: $link-hover-decoration;
   }
+  */
 }
 
 // And undo these styles for placeholder links/named anchors (without href)
