--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -109,6 +109,6 @@ a.animated {
 
 #page {
   > .node:first-child {
-    padding-top: calc(1.946428571rem + 1vw + 75px + 1rem);
+    //padding-top: calc(1.946428571rem + 1vw + 75px + 1rem);
   }
 }
