--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -48,6 +48,8 @@ h4, .h4 {
 
 nav {
   ul {
+    margin: 0;
+    padding: 0;
     list-style: none;
   }
 }
@@ -78,36 +80,6 @@ a.animated {
 
     &:before {
       transform: translateX(-10%) scaleY(1);
-    }
-  }
-}
-
-#site-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  min-height: 75px;
-  margin: calc(1.946428571rem + 1vw) 0 1rem;
-  z-index: 990;
-
-  .header-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  // Invert link colors
-  a {
-    color: $white;
-
-    &.animated {
-      &:before {
-        background-color: $white;
-      }
-
-      @include hover-focus {
-        color: $body-color;
-      }
     }
   }
 }
