BW-30 Style footer block

--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -110,6 +110,9 @@ $gray-light:                #636c72 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
+$gray-bg:                   #f3f3f3 !default;
+$gray-color:                #a2a2a2 !default;
+
 // Reassign color vars to semantic color scheme
 $brand-primary:             #4b7fe2 !default;
 $brand-success:             $green !default;
