--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -87,11 +87,14 @@ nav {
   overflow-x: hidden;
 
   > .animated {
-//    transform: translateX(-100%);
+    //transform: translateX(-120%);
     transition: transform .4s ease-out;
 
     &.mirrored {
-//      transform: translateX(100%);
+      @include media-breakpoint-up(md) {
+        text-align: right;
+        //transform: translateX(120%);
+      }
     }
 
     @include hover-focus {
@@ -106,26 +109,36 @@ nav {
 
 a.animated {
   position: relative;
+  display: inline-block;
+  transform: translateX(50%);
   transition: color .15s ease-out 0s;
 
-  &:before {
+  &:after {
     content: "";
-    display: block;
     position: absolute;
-    width: 120%;
+    width: calc(100% + 1rem);
     height: 1.5em;
     background-color: $link-color;
     z-index: -1;
-    transform: translateX(-120%) scaleY(.227272727);
     transition: transform .2s ease-out;
+    transform-origin: right center;
+
+    // Scale bar according to viewport width
+    transform: translateX(-200%) scaleX(1.25) scaleY(.227272727);
+    @include media-breakpoint-down(sm) {
+      transform: translateX(-200%) scaleX(.75) scaleY(.227272727);
+    }
+    @include media-breakpoint-up(lg) {
+      transform: translateX(-200%) scaleX(2) scaleY(.227272727);
+    }
   }
 
   @include hover-focus {
     color: $white;
     transition: color .166s ease-out .034s;
 
-    &:before {
-      transform: translateX(-10%) scaleY(1);
+    &:after {
+      transform: translateX(calc(-100% + .5rem)) scaleX(1) scaleY(1);
     }
   }
 }
