--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -170,3 +170,27 @@ a.animated {
 .node {
   padding-top: 4rem;
 }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -100;
+  overflow: hidden;
+
+  video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
