--- a/src/assets/scss/bootstrap/_reboot.scss
+++ b/src/assets/scss/bootstrap/_reboot.scss
@@ -58,6 +58,9 @@ html {
   // We assume no initial pixel `font-size` for accessibility reasons. This
   // allows web visitors to customize their browser default font-size, making
   // your project more inclusive and accessible to everyone.
+  // BUT, then rem units don't work anymore. Therefore we DO set an initial
+  // pixel size. // smk
+  font-size: $font-size-base;
 
   // As a side-effect of setting the @viewport above,
   // IE11 & Edge make the scrollbar overlap the content and automatically hide itself when not in use.
@@ -74,7 +77,6 @@ html {
 
 body {
   font-family: $font-family-base;
-  font-size: $font-size-base;
   font-weight: $font-weight-base;
   line-height: $line-height-base;
   // Go easy on the eyes and use something other than `#000` for text
