--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -117,11 +117,9 @@ nav {
 
 // Body animation
 .body.animation-wrapper {
-  overflow-x: hidden;
-
   > * {
     opacity: 0;
-    transform: translateX(-120%);
+    transform: translateX(-100%);
     transition: .4s ease-out;
     transition-property: opacity, transform;
     transition-delay: .6s;
@@ -131,6 +129,20 @@ nav {
       opacity: 1;
       transform: translateX(0);
     }
+  }
+}
+
+// Image animation
+.image.animation-wrapper {
+  background-color: $gray-bg;
+
+  img {
+    transform: translateX(-100%);
+    transition: transform .4s ease-out;
+  }
+
+  &.run img {
+    transform: translateX(0);
   }
 }
 
