BW-49 Link contact icons, fix animation

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -95,7 +95,7 @@ nav {
 
     // .run triggers animation
     .run & {
-      transform: translateX(0);
+      transform: translateX(0) !important;
     }
 
     // Right aligned text (contact)
