Cosmetic fixes: make fade transitions globally work again, fix logo link triggers page reload

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -230,3 +230,11 @@ button.animated {
     color: $brand-primary;
   }
 }
+
+// Transitions
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0
+}
