BW-70 Add loading animation (video currently disabled)

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -233,8 +233,12 @@ button.animated {
 
 // Transitions
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .5s
+  transition: opacity .5s;
 }
 .fade-enter, .fade-leave-to {
-  opacity: 0
+  opacity: 0;
+}
+
+.fade-enter-active.delay {
+  transition-delay: 2s;
 }
