BW-70 Fix animated links again
Works now for centered links since they appear most often, still need a solution for left-aligned links

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -150,7 +150,7 @@ a.animated,
 button.animated {
   position: relative;
   display: inline-block;
-  transform: translateX(calc(100% + 1rem));
+  transform: translateX(50%);
   transition: color .15s ease-out 0s;
 
   &:after {
