BW-78 Remove reduced font size for small devices
Didn’t change p font size to 15px due to side effects (h4 & others look too small)

--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -266,19 +266,19 @@ $font-weight-bold: 700 !default;
 $font-weight-heavy: 900 !default;
 
 $font-weight-base: $font-weight-normal !default;
-$line-height-base: 1.785714286 !default;
+$line-height-base: 1.78571 !default;
 
-$font-size-h1: 2.142857143rem !default;
-$font-size-h2: 1.571428571rem !default;
-$font-size-h3: 1.285714286rem !default;
-$font-size-h4: .857142857rem !default;
-$font-size-h5: .857142857rem !default;
-$font-size-h6: .857142857rem !default;
+$font-size-h1: 2.14285rem !default;
+$font-size-h2: 1.57142rem !default;
+$font-size-h3: 1.28571rem !default;
+$font-size-h4: .85714rem !default;
+$font-size-h5: .85714rem !default;
+$font-size-h6: .85714rem !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
 $headings-font-family:   inherit !default;
 $headings-font-weight:   900 !default;
-$headings-line-height:   1.366666667 !default;
+$headings-line-height:   1.36667 !default;
 $headings-color:         $brand-primary !default;
 
 $display1-size: 6rem !default;
