--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -251,7 +251,7 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: "Avenir Next", "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif: "AvenirNextLTW01", "Helvetica Neue", Arial, sans-serif !default;
 $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
