BW-87 Fix responsive video size
Vimeo s*cks

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -205,7 +205,9 @@ button.animated {
 // Iframes
 iframe {
   max-width: 100%;
-  height: auto;
+  @include media-breakpoint-down(sm) {
+    height: auto;
+  }
 }
 
 .text {
