BW-72 Output project tags

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -242,3 +242,43 @@ iframe {
 .fade-enter-active.delay {
   transition-delay: 2s;
 }
+
+// Approach explanation
+.approach-explanation {
+  display: flex;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+
+  @include media-breakpoint-down(sm) {
+    display: none;
+  }
+
+  .title {
+    font-weight: $font-weight-bold;
+    font-size: 1.285714286rem;
+    line-height: 1.388888889;
+    letter-spacing: .066666667em;
+    color: $brand-primary;
+    margin-right: 3rem;
+  }
+
+  .line {
+    width: 25%;
+    height: 4px;
+    background-color: $gray-bg;
+    margin-right: 2rem;
+    margin-top: .25rem;
+  }
+
+  .explanation {
+    font-size: 1.142857143rem;
+    line-height: 1.375;
+    letter-spacing: .083125em;
+    text-transform: uppercase;
+
+    p {
+      margin: .25rem 0;
+    }
+  }
+}
