BW-78 Increment base font size to 15px / .9375rem

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -256,9 +256,9 @@ iframe {
 
   .title {
     font-weight: $font-weight-bold;
-    font-size: 1.285714286rem;
-    line-height: 1.388888889;
-    letter-spacing: .066666667em;
+    font-size: 1.28571rem;
+    line-height: 1.38889;
+    letter-spacing: .06667em;
     color: $brand-primary;
     margin-right: 3rem;
   }
@@ -272,7 +272,7 @@ iframe {
   }
 
   .explanation {
-    font-size: 1.142857143rem;
+    font-size: 1.14285rem;
     line-height: 1.375;
     letter-spacing: .083125em;
     text-transform: uppercase;
