--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -91,14 +91,11 @@ ul.row {
 .animation-wrapper {
   overflow-x: hidden;
 
+  // animated sub-element
   > .animated {
-    transform: translateX(-120%);
-    transition: transform .4s ease-out;
-
-    // .run triggers animation
-    .run & {
-      transform: translateX(0) !important;
-    }
+    transform: translateX(-2vw);
+    opacity: 0;
+    transition: transform .2s ease-out, opacity .2s ease-out;
 
     // Right aligned text (contact)
     &.mirrored {
@@ -115,19 +112,29 @@ ul.row {
       }
     }
   }
+
+  // .run triggers animation
+  &.run {
+    > .animated {
+      transform: translateX(0) !important;
+      opacity: 1;
+    }
+  }
 }
 
-// Body animation
-.body.animation-wrapper {
+// Content animation
+.body.animation-wrapper,
+.animation-wrapper.animate-children {
   > * {
     opacity: 0;
-    transform: translateX(-100%);
-    transition: .4s ease-out;
-    transition-property: opacity, transform;
+    transform: translateX(-2vw);
+    transition: transform .2s ease-out, opacity .2s ease-out;
     transition-delay: .6s;
+  }
 
-    // .run triggers animation
-    .run & {
+  // .run triggers animation
+  &.run {
+    > * {
       opacity: 1;
       transform: translateX(0);
     }
@@ -139,12 +146,15 @@ ul.row {
   background-color: $gray-bg;
 
   img {
-    transform: translateX(-100%);
-    transition: transform .4s ease-out;
+    transform: translateX(-4vw);
+    transition: transform .2s ease-out, opacity .2s ease-out;
   }
 
-  &.run img {
-    transform: translateX(0);
+  &.run {
+    img {
+      transform: translateX(0);
+      opacity: 1;
+    }
   }
 }
 
