--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -1,3 +1,18 @@
 @import "easings";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
+
+// Helpers
+@mixin sr-only {
+  position: absolute !important;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+@mixin hide {
+  display: none;
+}
