BW-209 Fix link styles

--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -258,7 +258,7 @@ $font-family-base:       $font-family-sans-serif !default;
 
 $font-size-base: .875rem !default; // 14px
 $font-size-lg:   1.25rem !default;
-$font-size-sm:   .875rem !default;
+$font-size-sm:   .92857rem !default; // 13px
 $font-size-xs:   .75rem !default;
 
 $font-weight-normal: 400 !default;
