--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -51,6 +51,10 @@ h4, .h4 {
   color: $body-color;
 }
 
+p {
+  font-size: 1.14285rem;
+}
+
 nav {
   ul {
     margin: 0;
@@ -336,6 +340,7 @@ iframe {
 
     p {
       margin: .25rem 0;
+      font-size: 1rem;
     }
   }
 }
